crates/codira_codegen/src/snapshots/codira_codegen__test__invalid_binary_ops.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func main() {\n      let a = 3+3.0;\n      let b = 3.0+3;\n    }\n    "
snapshot_kind: text
---
mod.code (2:13): error: mismatched type
mod.code (3:15): error: mismatched type
