crates/codira_codegen/src/snapshots/codira_codegen__test__issue_133.snap
---
source: crates/codira_codegen/src/test.rs
assertion_line: 1045
expression: "\n    fn do_the_things(n: i32) -> i32 {\n        n + 7\n    }\n    \n    pub fn main() {\n        do_the_things(3);\n    }\n    "

---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

define i32 @do_the_things(i32 %0) {
body:
  %add = add i32 %0, 7
  ret i32 %add
}

define void @main() {
body:
  %do_the_things = call i32 @do_the_things(i32 3)
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

