crates/codira_codegen/src/snapshots/codira_codegen__test__issue_262.snap
---
source: crates/codira_codegen/src/test.rs
assertion_line: 1045
expression: "\n    fn foo() -> i32 {\n        let bar = {\n            let b = 3;\n            return b + 3;\n        };\n\n        // This code will never be executed\n        let a = 3 + 4;\n        a\n    }"

---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

define i32 @foo() {
body:
  ret i32 6
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

