crates/codira_codegen/src/snapshots/codira_codegen__test__let_statement.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn main(a:i32) -> i32 {\n      let b = a+1\n      b\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @main(i32 %0) {
body:
  %add = add i32 %0, 1
  ret i32 %add
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

