crates/codira_codegen/src/snapshots/codira_codegen__test__logic_op_bool.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn and(a: bool, b: bool) -> bool {\n        a && b\n    }\n    pub fn or(a: bool, b: bool) -> bool {\n        a || b\n    }    \n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i1 @and(i1 %0, i1 %1) {
body:
  %and = and i1 %0, %1
  ret i1 %and
}

define i1 @or(i1 %0, i1 %1) {
body:
  %or = or i1 %0, %1
  ret i1 %or
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

